Connected to own database

--- a/webserver/part3templates/index.html
+++ b/webserver/part3templates/index.html
@@ -8,7 +8,7 @@
 
 
 <body>
-  <h1>NYC Columbia Ftudent Friendly Businesses </h1>
+  <h1>NYC Columbia Student Friendly Businesses </h1>
   <div>{{data}}</div>
 
   <div>
