--- a/webserver/part3templates/index.html
+++ b/webserver/part3templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>NYC Columbia Student Friendly Businesses </h1>
-  <div>{{data}}</div>
+  <div id="noprint">{{data}}</div>
 
   <div>
     {% for n in data %}
