--- a/webserver/part3templates/index.html
+++ b/webserver/part3templates/index.html
@@ -9,14 +9,13 @@
 
 <body>
   <h1>NYC Columbia Student Friendly Businesses </h1>
-  
   <div>
     {% for n in data %}
     <div>{{n}}</div>
     {% endfor %}
   </div>
 
-<p><a href="/another">Go to the other page</a></p>
+<p><a href="/login">Check Balance</a></p>
 
 <form method="POST" action="/add">
 <p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
