--- a/webserver/part3templates/login.html
+++ b/webserver/part3templates/login.html
@@ -5,6 +5,7 @@
     <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
+    <div>{{data}}</div>
     <div class="container">
       <h1>Please login</h1>
       <br>
