--- a/webserver/part3templates/index.html
+++ b/webserver/part3templates/index.html
@@ -9,17 +9,7 @@
 
 <body>
   <h1>NYC Columbia Student Friendly Businesses </h1>
-  <div>
-    {% for n in data %}
-    <div>{{n}}</div>
-    {% endfor %}
-  </div>
-
-<p><a href="/login">Check Balance</a></p>
-
-<form method="POST" action="/add">
-<p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
-</form>
+<p><a href="/login">Login</a></p>
 
 </body>
 
