--- a/webserver/part3templates/anotherfile.html
+++ b/webserver/part3templates/anotherfile.html
@@ -1,4 +1,5 @@
-<h>Your balance is </h><div>{{data}}</div>
+<h>Your balance is </h>
+<div>${{data}}</div>
 
 <p><a href="/site">Go to the other page</a></p>
 
