--- a/webserver/part3templates/anotherfile.html
+++ b/webserver/part3templates/anotherfile.html
@@ -4,8 +4,10 @@
 <p><a href="/site">Go to the other page</a></p>
 
 
+<a href="/site">
   <div>
     {% for n in sites %}
     <div>{{n}}</div>
     {% endfor %}
   </div>
+</a>
