--- a/webserver/part3templates/anotherfile.html
+++ b/webserver/part3templates/anotherfile.html
@@ -3,10 +3,11 @@
 
 <p><a href="/site">Go to the other page</a></p>
 
+<div>{{tmp}}</div>
 
   <div>
     {% for n in sites %}
-    <a href="/site">
+    <a href="{{url_for('site', type='{{n}}')}}">
     <div>{{n}}</div>
     </a>
     {% endfor %}
