--- a/webserver/part3templates/anotherfile.html
+++ b/webserver/part3templates/anotherfile.html
@@ -7,7 +7,7 @@
 
   <div>
     {% for n in sites %}
-    <a href="{{url_for('/site', type={{n}})}}">
+    <a href="{{url_for('/site', type=n)}}">
     <div>{{n}}</div>
     </a>
     {% endfor %}
