--- a/webserver/part3templates/anotherfile.html
+++ b/webserver/part3templates/anotherfile.html
@@ -1,4 +1,4 @@
-<h2 style="font-family: Arial">Your balance is </h2>
+<h2 style="font-family: Arial">Your balance is ${{data}}</h2>
 <div>${{data}}</div>
 
 
