--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -1,5 +1,5 @@
 <div>{{data}}</div>
 <p> </p> 
 <div>Description: {{des}}</div>
-<div>{{street}}</div>
+<div>{% for n in street %}{{n}} {% endfor %}</div>
 
