--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -3,4 +3,5 @@
 <div>Description: {{des}}</div>
 <p> </p> 
 <div>Address: {% for n in street %}{{n}} {% endfor %}</div>
-
+<p> </p> 
+<div>Discount offer type: {{discount}}</div>
