--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -4,4 +4,5 @@
 <p> </p> 
 <div>Address: {% for n in street %}{{n}} {% endfor %}</div>
 <p> </p> 
-<div>Sells : {{sell}}</div>
+<div>Sells : {{sell}} </div>
+<div>Description: {{sellsdescription}}</div>
