--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -5,4 +5,4 @@
 <div>Address: {% for n in street %}{{n}} {% endfor %}</div>
 <p> </p> 
 <div>Sells : {{sell}} </div>
-<div>Description: {{sellsdescription}}</div>
+<div>Selling Description: {{sellsdescription}}</div>
