--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -4,5 +4,5 @@
 <p> </p> 
 <div>Address: {% for n in street %}{{n}} {% endfor %}</div>
 <p> </p> 
-<div>Sells : {{sell}} </div>
+<div>Sells : {{sell}} with cost ${{cost}}</div>
 <div>Selling Description: {{sellsdescription}}</div>
