--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -1,5 +1,7 @@
 <div>{{data}}</div>
 <p> </p> 
+<div>Category: {{assigned}}</div>
+<p></p>
 <div>Description: {{des}}</div>
 <p> </p> 
 <div>Address: {% for n in street %}{{n}} {% endfor %}</div>
