--- a/webserver/part3templates/anotherfile.html
+++ b/webserver/part3templates/anotherfile.html
@@ -1,4 +1,5 @@
 <h2 style="font-family: Arial">Your balance is ${{data}}</h2>
+<div>Recent Purchase: {{previous}}</div>
 
   <div>
     {% for n,j in both %}
