--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -7,4 +7,5 @@
 <div>Address: {% for n in street %}{{n}} {% endfor %}</div>
 <p> </p> 
 <div>Sells : {{sell}} with cost ${{cost}} with the following discount offered through {{type}}</div>
+<div>Total Discount: {{discountamount}}</div>
 <div>Selling Description: {{sellsdescription}}</div>
