--- a/webserver/part3templates/anotherfile.html
+++ b/webserver/part3templates/anotherfile.html
@@ -1,5 +1,5 @@
 <h2 style="font-family: Arial">Your balance is ${{data}}</h2>
-<div>Recent Purchase: {{previous}}</div>
+<h2 style="font-family: Arial"><div> Recent Purchase: {{previous}}</div></h2>
 <p> </p> 
   <div>
     {% for n,j in both %}
