--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -1,6 +1,7 @@
 <h2 style="font-family: Arial"><div>{{data}}</div></h2>
 <p> </p> 
-<div>Category: {{assigned}}</div>
+<h1>
+<div>Category: {{assigned}}</div> </h1>
 <p></p>
 <div>Description: {{des}}</div>
 <p> </p> 
