--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -1,7 +1,7 @@
 <h2 style="font-family: Arial"><div>{{data}}</div></h2>
 <p> </p> 
 <h1>
-<div>Category: {{assigned}}</div> </h1>
+<div style="font-family: Arial">Category: {{assigned}}</div> </h1>
 <p></p>
 <div>Description: {{des}}</div>
 <p> </p> 
