--- a/webserver/part3templates/site.html
+++ b/webserver/part3templates/site.html
@@ -1,7 +1,7 @@
 <h2 style="font-family: Arial"><div>{{data}}</div></h2>
 <p> </p> 
 <p style="font-family: Arial">
-<div Category: {{assigned}}</div> </p>
+<div Category: {{assigned}}> </div> </p>
 <p></p>
 <div>Description: {{des}}</div>
 <p> </p> 
