--- a/webserver/part3templates/index.html
+++ b/webserver/part3templates/index.html
@@ -8,7 +8,10 @@
 
 
 <body>
-  <h1>NYC Columbia Student Friendly Businesses </h1>
+  <h1 style="font-family: Arial">NYC Columbia Student Friendly Businesses </h1>
+  <p style="font-family: Arial">
+    Explore a selection of businesses that offer student discounts to Columbia students. From museums to baseball games, there are many ways to experience the city off campus. Log in below to view items from businesses that either offer a flat rate discount, accept Dining Dollars, or take Flex dollars, and add your favorites to your cart, and also to check your balance and previous transactions. 
+  </p>
 <p><a href="/login">Login</a></p>
 
 </body>
